src/App.css
:root {
  --padding: 1.5vh;
  --gap: 1.5vh;
  --topbar-height: 3rem;
  --available-height: calc(
    100vh - 2 * var(--padding) - 2 * var(--gap) - var(--topbar-height)
  );
  --board-size: min(56vh, 32vw);
  --movelist-width: max(140px, calc(var(--board-size) / 3.5));
  --board-wrapper-width: calc(var(--board-size) + var(--movelist-width));
  --graph-height: calc(var(--available-height) - var(--board-size));

  --base-board-width: 15vw;
  --engine-board-width: var(--base-board-width);
  --engine-kibitzer-height: 20rem;
  --engine-card-movelist-width: max(
    165px,
    calc(var(--engine-board-width) / 3.5)
  );
  --engine-card-width: calc(
    var(--engine-board-width) + var(--engine-card-movelist-width)
  );

  --font-xs: 0.8rem;
  --font-sm: 0.9rem;
  --font-md: 0.95rem;
  --font-lg: 1rem;
  --font-xl: 1.15rem;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  scroll-behavior: smooth;
  scrollbar-width: thin;
  scrollbar-color: rgba(150, 150, 150, 0.7) rgba(0, 0, 0, 0.1);
}

*::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

*::-webkit-scrollbar-thumb {
  background: rgba(150, 150, 150, 0.7);
  border-radius: 3px;
}
*::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.1);
  border-radius: 3px;
}

.app {
  width: 100vw;
  height: calc(100vh);
  padding: var(--padding);
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: grid;
  grid-template-columns: auto var(--board-wrapper-width) var(
      --engine-card-width
    );
  grid-template-rows: auto var(--board-size) var(--graph-height);
  gap: var(--gap);
}

.currentEvent {
  font-size: var(--font-lg);
  font-weight: bold;
}
.topBar,
.scheduleWindow,
.standingsWindow,
.graphWindow,
.engineWindowMobile {
  position: relative;
  border-radius: 8px;
  background: #343434;
  border: 1px solid #232323;
  padding: var(--gap);
  overflow: hidden;
}

.boardWrapper {
  position: relative;
}

.boardWindow {
  padding: 0;
  overflow: unset;
  display: flex;
}

.engineWindowMobile {
  padding: 0;
}

.topBar {
  grid-row: 1 / 2;
  grid-column: 1 / 4;
  display: flex;
  align-items: center;
  padding: 0 var(--gap);
  gap: var(--gap);
  font-weight: bold;
}

.engineWindow {
  grid-column: 3 / 4;
  grid-row: 2 / 4;
}

.scheduleWindow {
  overflow: hidden;
  display: grid;
  grid-template-rows: auto 2fr;
  padding-top: calc(0.5 * var(--gap));
  gap: calc(0.5 * var(--gap));
  grid-column: 1 / 2;
  grid-row: 2 / 3;
}

.graphWindow {
  grid-column: 2 / 3;
  grid-row: 3 / 4;
}

.standingsWindow {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  grid-row: 3 / 4;
  grid-column: 1 / 2;
  gap: var(--gap);
}

.standingsWindow button {
  position: absolute;
  top: 0.75rem;
  right: var(--gap);
}

@media (max-width: 1400px) {
  :root {
    --graph-height: 20rem;
    --board-size: calc(100vw - 45rem);
  }

  .app {
    grid-template-columns: var(--board-wrapper-width) 1fr;
    grid-template-rows:
      auto var(--board-size)
      400px fit-content fit-content;
    height: auto;
    overflow-y: auto;
  }

  .topBar {
    grid-column: 1 / 3;
    grid-row: 1 / 2;
  }

  .boardWindow {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    height: var(--board-size);
  }

  .engineWindow {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
  }

  .standingsWindow {
    grid-column: 1 / 3;
    grid-row: 5 / 6;
    max-height: 400px;
  }

  .graphWindow {
    grid-column: 1 / 3;
    grid-row: 3 / 4;
  }

  .scheduleWindow {
    grid-column: 1 / 3;
    grid-row: 4 / 5;
    height: 600px;
  }
}

@media (max-width: 1150px) {
  :root {
    --engine-card-width: calc(
      (100vw - 2 * var(--padding) - 2 * var(--gap)) / 3
    );
    --board-size: 44vw;
    --movelist-width: max(140px, 14vw);
  }

  .app {
    grid-template-columns: calc(var(--board-size) + var(--movelist-width)) 1fr;
    grid-template-rows:
      auto var(--board-size) calc(var(--graph-height) - 6rem)
      fit-content fit-content;
    height: auto;
    overflow-y: auto;
  }

  .topBar {
    grid-column: 1 / 3;
    flex-direction: column;
    align-items: flex-start;
    display: grid;
    grid-template-rows: auto auto;
    gap: 0.5rem;
    padding: 0.75rem var(--gap);
  }

  .boardWindow {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
  }

  .engineVsEngine {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
  }

  .graphWindow {
    grid-column: 1 / 3;
    grid-row: 3 / 4;
  }

  .standingsWindow {
    grid-column: 1 / 3;
    grid-row: 5 / 6;
  }

  .scheduleWindow {
    grid-column: 1 / 3;
    grid-row: 4 / 5;
  }

  .engineWindow {
    grid-column: 1 / 3;
    grid-row: 3 / 4;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    gap: var(--gap);
    height: auto;
  }
}

@media (max-width: 775px) {
  :root {
    --board-size: calc(100vw - 2 * var(--padding));
    --graph-height: 18rem;
    --movelist-width: 20vw;
    --engine-card-width: calc(100vw - 2 * var(--padding) - 10vw);
    --padding: 0.5rem;
    --gap: 0.75rem;
  }

  .app {
    grid-template-columns: 1fr;
    grid-template-rows: auto auto 347px auto auto auto;
    height: auto;
    overflow-y: auto;

    width: 100vw;
    gap: 0.5rem;
  }

  .engineWindow {
    grid-column: 3 / 4;
    grid-row: 2 / 4;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    gap: 0.5rem;
    height: auto;
  }

  .boardWindow {
    grid-column: 1 / 2;
    display: grid !important;
    grid-template-columns: minmax(var(--board-size), var(--board-size));
    grid-template-rows: auto var(--board-size) auto var(--padding) auto auto;
    height: auto;
  }

  .boardWindow > .engineMinimal:first-child {
    grid-column: 1 / 2;
    grid-row: 1;
  }

  .boardWindow > .board {
    grid-column: 1 / 2;
    grid-row: 2;
  }

  .boardWindow > .engineMinimal:last-child {
    grid-column: 1 / 2;
    grid-row: 3;
  }

  .boardWindow > .movesWindow {
    grid-column: 1 / 2;
    width: var(--board-size);
    grid-row: 5;
  }

  .topBar {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
    width: 100%;
  }

  .standingsWindow {
    grid-row: 6 / 7;
    grid-column: 1 / 2;
  }

  .scheduleWindow {
    grid-column: 1 / 2;
    grid-row: 5 / 6;
  }

  .graphWindow {
    grid-column: 1 / 2;
    grid-row: 4 / 5;
    height: 300px;
  }
}

